--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCreateAccount"
         android:backgroundTint="?attr/colorPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
