--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/outline_exit_to_app_24"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                />
+            <ImageView
+                android:id="@+id/btnProfile"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:src="@drawable/baseline_person_24"
+                android:layout_gravity="end"
                 android:layout_marginEnd="16dp"
                 />
 
