--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,102 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".app.modules.main.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomNav"
+        />
 
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:title="@string/homeAppBarTitle">
-            <ImageView
-                android:id="@+id/btnLogout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/outline_exit_to_app_24"
-                android:layout_gravity="end"
-                android:layout_marginEnd="16dp"
-                />
-            <ImageView
-                android:id="@+id/btnProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="28dp"
-                android:src="@drawable/baseline_person_24"
-                android:layout_gravity="end"
-                android:layout_marginEnd="16dp"
-                />
-
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <EditText
-        android:id="@+id/editTxtDescription"
-        android:hint="@string/descriptionHintText"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBar"
-        android:inputType="text" />
-    <LinearLayout
-        android:id="@+id/buttonsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTxtDescription"
-        app:layout_constraintBottom_toTopOf="@id/todosList"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="8dp">
-
-        <Button
-            android:id="@+id/btnAdd"
-            android:backgroundTint="?attr/colorPrimary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/addButtonLabel"
-            android:layout_weight="1"/>
-
-<!--        Separator providing some space between buttons-->
-        <View
-            android:layout_width="2dp"
-            android:layout_height="0dp" />
-
-        <Button
-            android:id="@+id/btnRemove"
-            android:backgroundTint="?attr/colorPrimary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/removeButtonLabel"
-            android:layout_weight="1"/>
-
-        <View
-            android:layout_width="2dp"
-            android:layout_height="0dp" />
-
-        <Button
-            android:id="@+id/btnClear"
-            android:backgroundTint="?attr/colorPrimary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/clearButtonLabel"
-            android:layout_weight="1"/>
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/todosList"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonsLayout" />
+        app:menu="@menu/nav_menu"
+        android:scrollIndicators="left" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
