--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,12 +34,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appBar">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profileImage"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center"
                 android:layout_marginTop="56dp"
-                android:background="@color/gray"/>
+                android:background="@drawable/circle_shape"/>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fabCamera"
