--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -119,6 +119,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/buttonsLayout" />
 
         </LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnNewTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:tint="@color/white"
+            app:backgroundTint="@color/infnet_blue"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/baseline_add_24"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
