--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     tools:context=".app.modules.auth.RegisterActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
+        android:id="@+id/registerAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -15,12 +15,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/registerToolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:title="@string/registerAppBarTitle">
-
-        </androidx.appcompat.widget.Toolbar>
+            app:title="@string/registerAppBarTitle"
+            app:navigationIcon="@drawable/baseline_arrow_back_24" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <EditText
@@ -35,7 +35,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBar" />
+        app:layout_constraintTop_toBottomOf="@+id/registerAppBar" />
 
     <EditText
         android:id="@+id/editTextEmailAddress"
@@ -79,30 +79,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
-    <Button
-        android:id="@+id/btnCreateAccount"
-        android:backgroundTint="?attr/colorPrimary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/createAccountButtonText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
-
-    <fragment
-        android:id="@+id/googleLoginFragment"
-        class="br.com.bmsrangel.dev.todolist.app.modules.auth.fragments.GoogleLoginFragment"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/createAccountBtnFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/orText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
+        tools:layout="@layout/fragment_custom_button" />
+
+    <TextView
+        android:id="@+id/orText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/orText"
+        app:layout_constraintBottom_toTopOf="@+id/googleLoginFragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/createAccountBtnFragment"/>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/googleLoginFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.modules.auth.fragments.GoogleLoginFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount"
+        app:layout_constraintTop_toBottomOf="@+id/createAccountBtnFragment"
         app:layout_constraintVertical_bias="0.198"
         tools:layout="@layout/fragment_google_login" />
 </androidx.constraintlayout.widget.ConstraintLayout>
