--- a/app/src/main/res/layout/activity_single_task.xml
+++ b/app/src/main/res/layout/activity_single_task.xml
@@ -20,9 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="@string/newTaskTitleText"
-            app:navigationIcon="@drawable/baseline_arrow_back_24">
-
-        </com.google.android.material.appbar.MaterialToolbar>
+            app:navigationIcon="@drawable/baseline_arrow_back_24" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
