--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,24 +23,24 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <EditText
-        android:id="@+id/editTextLoginEmailAddress"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/editTextEmailFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.core.components.EmailEditTextFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="@string/emailHintText"
-        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerAppBar" />
+        app:layout_constraintTop_toBottomOf="@+id/registerAppBar"
+        tools:layout="@layout/fragment_email_edit_text"/>
 
     <EditText
         android:id="@+id/editTextLoginPassword"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
@@ -49,7 +49,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextEmailFragment" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/loginBtnFragment"
@@ -63,19 +63,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
         tools:layout="@layout/fragment_custom_button" />
-
-<!--    <Button-->
-<!--        android:id="@+id/btnLogin"-->
-<!--        android:backgroundTint="?attr/colorPrimary"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:text="@string/loginButtonText"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />-->
 
     <TextView
         android:id="@+id/orText"
@@ -115,7 +102,7 @@
         android:id="@+id/btnRegister"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
-        android:layout_height="40sp"
+        android:layout_height="48sp"
         android:layout_marginTop="8dp"
         android:text="@string/registerButtonText"
         app:layout_constraintEnd_toEndOf="parent"
