--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,33 +37,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerAppBar" />
 
-    <EditText
-        android:id="@+id/editTextEmailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/editTextEmailRegisterFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.core.components.EmailEditTextFragment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="@string/emailHintText"
-        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextName" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextName"
+        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRegisterFragment"
+        tools:layout="@layout/fragment_email_edit_text"/>
 
-    <EditText
-        android:id="@+id/editTextPassword"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/editTextPasswordRegisterFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.core.components.PasswordEditTextFragment"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="@string/passwordHintText"
-        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegisterFragment"
+        tools:layout="@layout/fragment_password_edit_text"/>
 
     <EditText
         android:id="@+id/editTextConfirmPassword"
@@ -77,7 +78,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegisterFragment" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/createAccountBtnFragment"
