--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -117,6 +117,17 @@
                     tools:layout="@layout/fragment_custom_button" />
 
                 <androidx.fragment.app.FragmentContainerView
+                    android:id="@+id/updatePasswordBtnFragment"
+                    android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:layout="@layout/fragment_custom_button"
+                    app:layout_constraintBottom_toTopOf="@id/logoutBtnFragment"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/updateProfileBtnFragment"/>
+
+                <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/logoutBtnFragment"
                     android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
                     android:layout_width="match_parent"
