--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailFragment" />
 
+    <Button
+        android:id="@+id/forgotPasswordBtn"
+        style="@style/TextButtonSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:text="@string/forgotPasswordBtnText"
+        app:layout_constraintBottom_toTopOf="@+id/loginBtnFragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/loginBtnFragment"
         android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
@@ -61,7 +73,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBtn"
         tools:layout="@layout/fragment_custom_button" />
 
     <TextView
