Started refactoring the Profile Image functionality

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -42,14 +42,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:name="br.com.bmsrangel.dev.todolist.app.core.components.EmailEditTextFragment"
+            android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.EmailEditTextFragment"
             tools:layout="@layout/fragment_email_edit_text"/>
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/sendForgotPasswordEmailBtnFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
+            android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.CustomButtonFragment"
             tools:layout="@layout/fragment_custom_button"/>
     </LinearLayout>
 
