--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/editTextEmailRegisterFragment"
-        android:name="br.com.bmsrangel.dev.todolist.app.core.components.EmailEditTextFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.EmailEditTextFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -54,7 +54,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/editTextPasswordRegisterFragment"
-        android:name="br.com.bmsrangel.dev.todolist.app.core.components.PasswordEditTextFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.PasswordEditTextFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -81,7 +81,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/createAccountBtnFragment"
-        android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
+        android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.CustomButtonFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
