--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
-            android:name="br.com.bmsrangel.dev.todolist.app.core.components.PasswordEditTextFragment"
+            android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.PasswordEditTextFragment"
             tools:layout="@layout/fragment_password_edit_text"/>
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/updatePasswordActionBtnFragment"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="32dp"
-            android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
+            android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.CustomButtonFragment"
             tools:layout="@layout/fragment_custom_button" />
     </LinearLayout>
 
