--- a/app/src/main/res/layout/fragment_custom_button.xml
+++ b/app/src/main/res/layout/fragment_custom_button.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.core.components.CustomButtonFragment">
+    tools:context=".app.core.fragments.CustomButtonFragment">
     <Button
         android:id="@+id/customButton"
         android:layout_width="match_parent"
