--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,6 +22,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:title="@string/profileAppBarTitle">
+                <fragment
+                    android:id="@+id/weatherFragmentProfile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="16dp"
+                    android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.WeatherFragment"
+                    tools:layout="@layout/fragment_weather"/>
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
