--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -22,14 +22,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:title="@string/homeAppBarTitle">
-                <ImageView
-                    android:id="@+id/btnLogout"
+                <fragment
+                    android:id="@+id/weatherFragmentTasks"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/outline_exit_to_app_24"
                     android:layout_gravity="end"
                     android:layout_marginEnd="16dp"
-                    />
+                    android:name="br.com.bmsrangel.dev.todolist.app.core.fragments.WeatherFragment"
+                    tools:layout="@layout/fragment_weather"/>
+<!--                <ImageView-->
+<!--                    android:id="@+id/btnLogout"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:src="@drawable/outline_exit_to_app_24"-->
+<!--                    android:layout_gravity="end"-->
+<!--                    android:layout_marginEnd="16dp"-->
+<!--                    />-->
 
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
