Started configuring the Notification Channel in TasksFragment.kt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="@string/homeAppBarTitle">
-            <fragment
-                android:id="@+id/weatherFragmentProfile"
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/weatherFragmentContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
